--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		/>
 		<title>Todo</title>
 	</head>
-	<body id="root" class="bg-[#171717] h-screen">
-		<!-- <div id="root" class="h-screen"></div> -->
+	<body class="bg-[#171717] h-screen">
+		<div id="root" class="h-screen bg-[#171717]"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
